gcc/testsuite/rust/compile/issue-3530-1.rs
#[repr(i32)]
enum NightsWatch {} // { dg-error "unsupported representation for zero-variant enum" }
